add gadget code, readmes, and unit tests
Signed-off-by: Shaheer Ahmad <shaheerahmad57575@gmail.com>

--- a/gadgets/Makefile
+++ b/gadgets/Makefile
@@ -64,6 +64,7 @@ GADGETS ?= \
 	ci/sched_cls_drop \
 	ci/image_inspect \
 	ci/container_filtering \
+	snapshot_file \
 	#
 
 DATE=$(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
